@@ -3,12 +3,12 @@ contributions of the following people:
 
   Paul Beckingham    (Principal Author)
   Federico Hernandez (Principal Author)
+  Dirk Deimeke       (Technical Advisor)
+  Tomas Babej        (Contributing Author)
 
 The following submitted code, packages or analysis, and deserve special thanks:
 
   Renato Alves
-  Tomas Babej
-  Dirk Deimeke
   Wim Schuermann
   Jelle van der Waa
   Sergey Trofimov
